[project]
name = "website"
version = "0.1.0"
description = "Mason Egger's personal website"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material[imaging]>=9.5.31",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-rss-plugin>=1.15.0",
    "pymdown-extensions>=10.5",
    "click==8.2.1"
]
